WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181680
:active pseudo class doesn't deactivate when using pressure sensitive trackpad
https://bugs.webkit.org/show_bug.cgi?id=181680
Summary
:active pseudo class doesn't deactivate when using pressure sensitive trackpad
Antti Koivisto
Reported
2018-01-16 06:43:24 PST
<style> div:active { color: green } </style> <div> Test </div> Lifting the finger does not remove the active pseudo class.
Attachments
patch
(1.75 KB, patch)
2018-01-16 11:47 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2018-01-16 11:47:57 PST
Created
attachment 331408
[details]
patch
WebKit Commit Bot
Comment 2
2018-04-18 15:01:32 PDT
Comment on
attachment 331408
[details]
patch Clearing flags on attachment: 331408 Committed
r230786
: <
https://trac.webkit.org/changeset/230786
>
WebKit Commit Bot
Comment 3
2018-04-18 15:01:34 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-04-18 15:02:22 PDT
<
rdar://problem/39542248
>
Simon Fraser (smfr)
Comment 5
2018-04-18 15:09:42 PDT
***
Bug 179592
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug